--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
             <img src="ninja400.jpg">
             <h1 id="b">Kawasaki Ninja 400</h1>
             <p id="b">Price: 215,000 Baht</p>
-            <a href="https://www.kawasaki.co.th/th/motorcycle/ninja400" target="_blank"><button id="d">Details</button></a>
+            <a href="ninja400.html"><button class="btn">Details</button></a>
         </div>
         <!-- มอไซค์คันที่สอง -->
         <div class="cbr500r">
             <img src="cbr500r.jpg">
             <h1 id="b">Honda CBR500r</h1>
             <p id="b">Price: 222,800 Baht</p>
-            <a href="https://www.thaihonda.co.th/hondabigbike/motorcycle/500series/all-new-cbr500r-2024" target="_blank"><button id="d">Details</button></a>
+            <a href="cbr500r.html"><button class="btn">Details</button></a>
         </div>
         <!-- มอไซค์คันที่สาม -->
         <div class="yzf-r7">
             <img src="yzf-r7.png">
             <h1 id="b">Yamaha YZF-R7</h1>
             <p id="b">Price: 339,000 Baht</p>
-            <a href="https://www.yamaha-motor.co.th/bigbike/r7-2025/overview" target="_blank"><button id="d">Details</button></a>
+            <a href="yzf-r7.html"><button class="btn">Details</button></a>
         </div>
         <!-- มอไซค์คันที่สี่ -->
         <div class="mt-07">
             <img src="mt07.jpg">
             <h1 id="b">Yamaha MT-07</h1>
             <p id="b">Price: 305,000 Baht</p>
-            <a href="https://www.yamaha-motor.co.th/bigbike/mt07/overview" target="_blank"><button id="d">Details</button></a>
+            <a href="mt-07.html"><button class="btn">Details</button></a>
         </div>
     </body>
 </html>
